--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,114 @@
                 >Ipad</a
               >
             </li>
+            <li class="flex items-center">
+              <a
+                href="#macbook"
+                class="
+                  lg:text-white lg:hover:text-gray-300
+                  text-gray-800
+                  px-3
+                  py-4
+                  lg:py-2
+                  flex
+                  items-center
+                  text-xs
+                  uppercase
+                  font-bold
+                "
+                ><i
+                  class="
+                    lg:text-gray-300
+                    text-gray-500
+                    fas
+                    fa-laptop
+                    text-lg
+                    leading-lg
+                    mr-2
+                  "
+                ></i
+                >Macbook</a
+              >
+            </li>
+            <li class="flex items-center">
+              <a
+                href="#ipad"
+                class="
+                  lg:text-white lg:hover:text-gray-300
+                  text-gray-800
+                  px-3
+                  py-4
+                  lg:py-2
+                  flex
+                  items-center
+                  text-xs
+                  uppercase
+                  font-bold
+                "
+                ><i
+                  class="
+                    lg:text-gray-300
+                    text-gray-500
+                    fas
+                    fa-users
+                    text-lg
+                    leading-lg
+                    mr-2
+                  "
+                ></i
+                >Team</a
+              >
+            </li>
+            <li class="flex items-center">
+              <a
+                href="#ipad"
+                class="
+                  lg:text-white lg:hover:text-gray-300
+                  text-gray-800
+                  px-3
+                  py-4
+                  lg:py-2
+                  flex
+                  items-center
+                  text-xs
+                  uppercase
+                  font-bold
+                "
+                ><i
+                  class="
+                    lg:text-gray-300
+                    text-gray-500
+                    fas
+                    fa-address-card
+                    text-lg
+                    leading-lg
+                    mr-2
+                  "
+                ></i
+                >Contact Us</a
+              >
+            </li>
+          </ul>
+          <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+            <li class="flex items-center">
+              <a
+                href=""
+                class="
+                  lg:text-white lg:hover:text-gray-300
+                  text-gray-800
+                  px-3
+                  py-4
+                  lg:py-2
+                  flex
+                  items-center
+                  text-xs
+                  uppercase
+                  font-bold
+                "
+              >
+                <i class="lg:text-gray-300 text-gray-500 fa-facebook-f"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
